# Hexpp-Compiler-Cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  COMPILE.md
docs/: examples.md  overview.md
src/: arena.hpp  generation.cpp  generation.hpp  hexagonCompat.cpp  hexagonCompat.hpp  inbuiltfuncs.hpp  main.cpp  parser.cpp  parser.hpp  tokenization.cpp  tokenization.hpp
